# docker-flask

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
model/: OracleManagerSQL.py  SQLiteManager.py  SQLiteManagerORM.py
nginx/: code-server.conf  default.conf  fastapi.conf_back  fastapi.conf_bbb  nginx.conf
static/css/: styles.css
static/js/: scripts.js
templates/: index.html
