[project]
name = "docker-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler==3.11.0",
    "blinker==1.9.0",
    "brotli==1.1.0",
    "cachelib==0.9.0",
    "cffi==1.17.1",
    "click==8.1.8",
    "cryptography==44.0.2",
    "exceptiongroup==1.2.2",
    "flask==3.1.0",
    "flask-caching==2.3.0",
    "flask-compress==1.17",
    "flask-talisman==1.1.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "h2==4.1.0",
    "hpack==4.0.0",
    "hyperframe==6.0.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "oracledb==3.0.0",
    "packaging==24.2",
    "priority==2.0.0",
    "pycparser==2.22",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.36",
    "taskgroup==0.2.2",
    "tomli==2.2.1",
    "typing-extensions==4.12.2",
    "tzlocal==5.2",
    "werkzeug==3.1.3",
    "wsproto==1.2.0",
    "zstandard==0.23.0",
]
